# zamlive

./: .dlint.yaml  .gitignore  README.md  daml.yaml  http-json.sh  package.json  stack.yaml  zamlive-bot.cabal
bot-src/: Bot.hs  Contracts.hs  CopyBot.hs  Domain.hs  Logging.hs  MCLedger.hs  Main.hs  RuleBot.hs
bot-src/DA/Ledger/App/MasterCopy/: Bot.hs  Contracts.hs  CopyBot.hs  Domain.hs  MCLedger.hs  RuleBot.hs
daml/: Balance.daml  Main.daml  Main.daml.orig  Simplified.daml
lib/daml-ledger-0.1.0.0/: daml-ledger.cabal
lib/daml-ledger-0.1.0.0/src/DA/Ledger/: Convert.hs  IsLedgerValue.hs  Types.hs
scripts/: navigator.sh  sandbox.sh
src/: Account.ts  AccountProposal.ts  AccountsList.tsx  AccountsView.tsx  App.tsx  ApprovalTab.tsx  CreateTab.tsx  ExpenseForm.tsx  ExpenseNotification.ts  Ledger.ts  ListTab.tsx  LoginScreen.tsx  Main.tsx  User.ts
