cabal-version: 1.12

name:           zamlive-bot
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/hurryabit/zamlive#readme>
homepage:       https://github.com/hurryabit/zamlive#readme
bug-reports:    https://github.com/hurryabit/zamlive/issues
author:         Team ZAMLive
maintainer:     martin.huschenbett@digitalasset.com
copyright:      2019 Digital Asset (Switzerland) GmbH
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/hurryabit/zamlive

executable zamlive-bot
  main-is: DA/Ledger/App/MasterCopy/Main.hs
  other-modules:
      DA.Ledger.App.MasterCopy.MCLedger
      DA.Ledger.App.MasterCopy.Contracts
      DA.Ledger.App.MasterCopy.Domain
      DA.Ledger.App.MasterCopy.Logging
      DA.Ledger.App.MasterCopy.Bot
      DA.Ledger.App.MasterCopy.RuleBot
      DA.Ledger.App.MasterCopy.CopyBot
  hs-source-dirs:
      bot-src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is DA.Ledger.App.MasterCopy.Main
  build-depends:
      ansi-terminal
    , async
    , base
    , containers
    , daml-ledger
    , extra
    , haskeline
    , random
    , retry
    , text
    , time
    , transformers
    , uuid
  default-language: Haskell2010
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
