cabal-version: 1.12

name:           zamlive-bot
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/hurryabit/zamlive#readme>
homepage:       https://github.com/hurryabit/zamlive#readme
bug-reports:    https://github.com/hurryabit/zamlive/issues
author:         Team ZAMLive @ Digital Asset
maintainer:     martin.huschenbett@digitalasset.com
copyright:      2019 Digital Asset (Switzerland) GmbH
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/hurryabit/zamlive

executable zamlive-bot
  hs-source-dirs:
      bot-src
  main-is: Main.hs
  other-modules:
      MCLedger
      Contracts
      Domain
      Logging
      Bot
      RuleBot
      CopyBot
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ansi-terminal,
      async,
      base,
      containers,
      daml-ledger,
      extra,
      random,
      text,
      time,
      uuid
  default-language: Haskell2010
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
